force-app/main/default/objects/Catalog_Line_Item__c/Catalog_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Catalog Line Item</label>
    <nameField>
        <label>Catalog Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>