force-app/main/default/objects/Catalog_Line_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>