force-app/main/default/objects/Catalog_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>Product_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>