force-app/main/default/objects/Catalog_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Catalog Line Items</relationshipLabel>
    <relationshipName>Catalog_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>